--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,24 @@ body {
     height: 1000px;
     min-height: 100vh;
     background-color: aqua;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .body-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
+}
+
+.body-wrapper h3 {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 0 1rem;
+    height: 100%;
 }
