--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
   
 .note.active {
-    color: #e74c3c;
+    color: #613ce7;
 }
   
 .notes-list {
@@ -128,6 +128,39 @@ body {
     width: 2px;
     border-top-width: 20px;
 }
+
+.tab-container {
+    position: relative;
+    width: 200px;
+    height: 40px;
+    background-color: #3498db;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  /* Define the tab content style */
+  .tab-content {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: #2980b9;
+    color: #fff;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.3s ease-in-out;
+    visibility: hidden;
+  }
+  
+  /* Show the tab content on hover */
+  .tab-container:hover .tab-content {
+    transform: scaleY(1);
+    visibility: visible;
+  }
   
 @media (max-width: 768px) {
     .meter {
