--- a/navbar.css
+++ b/navbar.css
@@ -66,7 +66,7 @@
         max-width: 1300px;
         padding: 0;
         position: absolute;
-        z-index: 11;
+        z-index: 1;
     }
 
     .navbar-container h2 {
@@ -76,12 +76,15 @@
         margin-right: 33%;
         margin-left: 33%;
         position: absolute;
-        z-index: 11;
+        z-index: 1;
     }
 
     .navbar-menu {
         display: inline-grid;
-        grid-template-columns: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
         align-items: center;
         justify-content: center;
         margin: 0;
@@ -91,8 +94,10 @@
         opacity: 0;
         transition: all 0.5s ease;
         height: 50vh;
-        z-index: 11;
+        z-index: 1;
     }
+    
+    .navbar-menu 
 
     #navbar-logo {
         margin-left: 4%;
