--- a/chords.css
+++ b/chords.css
@@ -1,19 +1,37 @@
+html {
+    height: 100%;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    background-color: green;
+    position: fixed;
+    font-family: sans-serif;
+    color: #2c3e50;
     margin: 0;
-    background-color: #f4f4f4;
+    width: 100%;
+    height: 100%;
+    cursor: default;
+    user-select: none;
+}
+
+.chord-container {
+    background-color: aqua;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 #chord-generator {
-    background-color: white;
+    background-color: red;
+    margin-top: 50px;
+    margin-bottom: 50px;
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
+    max-width: 5000px;
 }
 
 #chord-generator h1 {
@@ -42,23 +60,22 @@ select, button {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #cB6843;
     color: white;
     font-weight: bold;
     cursor: pointer;
-    border-color: #007bff;
+    border-color: #cB6840;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #cB6830;
     border-color: #0056b3;
 }
 
 #chord-diagram {
     margin-top: 20px;
     padding: 20px;
-    background-color: #eee;
-    border: 1px dashed #ccc;
+    background-color: #eedbbb;
     display: flex;
     justify-content: center;
     align-items: center;
