--- a/songfinder.css
+++ b/songfinder.css
@@ -1,87 +1,50 @@
-html {
-  height: 100%;
-}
-
-.title-container {
-  text-align: center;
-  padding: 10px;
-  color: #2c3e50;
-}
-
-.title-container h1 {
-  margin: 1;
-}
-
-.output-container {
-  
-}
-
-.output {
-  margin-top: 10px;
-  padding-right: 25%;
-  padding-left: 25%;
-  padding-top: 10%;
-
-}
-
-#apiOutput {
-  width: 100%;
-}
-
-.record-wrapper {
-  display: flex;
-  background-color: aqua;
-  align-items: center;
-  justify-content: center;
-}
-
-.record-text {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 15px;
-  margin-right: 25%;
-  margin-left: 25%;
+.record-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-top: 25%;
 
 }
 
 .record-button {
     display: inline-block;
-    padding: 20px 20px;
+    padding: 10px 20px;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
-    background-color: #4caf50; 
-    color: #fff; 
+    background-color: #4caf50; /* Green color, you can customize this */
+    color: #fff; /* White text */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    
   }
   
+  /* Hover effect for the record button */
   .record-button:hover {
-    background-color: #45a049; 
+    background-color: #45a049; /* Darker green color on hover */
   }
   
-  .stop-button {
+  /* Style for the stop record button */
+  .stop-record-button {
     display: inline-block;
-    padding: 20px 20px;
+    padding: 10px 20px;
     font-size: 16px;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
-    background-color: #d9534f; 
-    color: #fff; 
+    background-color: #d9534f; /* Red color, you can customize this */
+    color: #fff; /* White text */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
-  
+  /* Hover effect for the stop record button */
   .stop-record-button:hover {
-    background-color: #c9302c; 
+    background-color: #c9302c; /* Darker red color on hover */
 }
-
