--- a/Genre and Chord Detection/views/results.ejs
+++ b/Genre and Chord Detection/views/results.ejs
@@ -1,72 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Results</title>
-    <link rel="stylesheet" href="<%= bootstrapCSS %>">
+    <link rel="stylesheet" href="<%= bootstrapCSS %>" />
     <style>
-        body { background-color: #eedbbb; }
-        .card {
-            height: 220px; width: 220px;
-            background-color: rgba(255, 255, 255, 0.4);
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            margin: auto;
-        }
-        .container h2 {
-            text-align: center;
-            margin-top: 20px; margin-bottom: 40px;
-            color: #333;
-        }
-        .card-title { color: #333; font-weight: bold; font-size: 1.2rem; }
-        .card-text { color: #333; font-size: 1.5rem; }
-        .chord-card { background-color: rgba(251, 190, 9, 0.4); }
-        .genre-card { background-color: rgba(23, 162, 184, 0.4); }
-        .centered-container {
-            display: flex; justify-content: center; text-align: center; 
-        }
-        .centered-container h1 { margin: 0; }
-    </style>
-</head>
-<body>
-<div class="centered-container">
-    <h1>Results</h1>
-</div>
+      .navbar {
+        background-color: #cb6843;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.2rem;
+        position: sticky;
+        border-bottom: solid;
+        border-color: #203354;
+      }
 
-<div class="container mt-5">
-    <!-- Chords Row -->
-    <div class="row justify-content-center mb-5">
+      .navbar-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        max-width: 1100px;
+        margin: none;
+        padding: 0 50px;
+      }
+
+      #navbar-logo img {
+        height: 75px;
+        width: 75px;
+        cursor: pointer;
+      }
+
+      .navbar-menu {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        list-style: none;
+        text-align: center;
+      }
+
+      .navbar-item {
+        height: 80px;
+      }
+
+      .guitar {
+        position: absolute;
+        left: 10px;
+      }
+
+      .navbar-links1 {
+        color: white;
+        grid-area: 1 / 1 / 2 / 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        padding: 0 1rem;
+        height: 100%;
+      }
+
+      .navbar-links2 {
+        color: white;
+        grid-area: 2 / 1 / 3 / 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        padding: 0 1rem;
+        height: 100%;
+      }
+
+      .navbar-links1:hover {
+        color: #203354;
+        transition: all 0.7s ease;
+      }
+
+      .navbar-links2:hover {
+        color: #203354;
+        transition: all 0.7s ease;
+      }
+
+      body {
+        background-color: #eedbbb;
+      }
+      .card {
+        height: 220px;
+        width: 220px;
+        background-color: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(10px);
+        border-radius: 15px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        margin: auto;
+      }
+      .container h2 {
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 40px;
+        color: #333;
+      }
+      .card-title {
+        color: #333;
+        font-weight: bold;
+        font-size: 1.2rem;
+      }
+      .card-text {
+        color: #333;
+        font-size: 1.5rem;
+      }
+      .chord-card {
+        background-color: rgba(251, 190, 9, 0.4);
+      }
+      .genre-card {
+        background-color: rgba(23, 162, 184, 0.4);
+      }
+      .centered-container {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+      }
+      .centered-container h1 {
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar">
+        <div class="navbar-container">
+          <ul class="navbar-menu">
+            <li class="navbar-item">
+              <a href="/" class="navbar-links1"> Song Finder </a>
+            </li>
+            <li class="navbar-item">
+              <a href="http://127.0.0.1:5500/tuner.html" class="navbar-links2"> Tuner </a>
+            </li>
+            <li class="navbar-item">
+              <a href="http://127.0.0.1:5500/chords.html" class="navbar-links2"> Chords </a>
+            </li>
+            <li class="navbar-item">
+              <a href="http://localhost:3000/" class="navbar-links2">
+                Genre & Chords Detection
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+  
+
+    <div style="justify-content: center; display: flex; margin-top: 50px;">
+      <h1>Results</h1>
+    </div>
+
+    <div class="container mt-5">
+      <!-- Chords Row -->
+      <div class="row justify-content-center mb-5">
         <h2 class="w-100 text-center">Chords</h2>
         <% chords.forEach((chord, index) => { %>
         <div class="col mb-4 d-flex align-items-stretch">
-            <div class="card chord-card">
-                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                    <h5 class="card-title"><%= chord.label %></h5>
-                    <p class="card-text"><%= (chord.score * 100).toFixed(2) %> %</p>
-                </div>
+          <div class="card chord-card">
+            <div
+              class="card-body d-flex flex-column justify-content-center align-items-center"
+            >
+              <h5 class="card-title"><%= chord.label %></h5>
+              <p class="card-text"><%= (chord.score * 100).toFixed(2) %> %</p>
             </div>
+          </div>
         </div>
         <% }) %>
-    </div>
+      </div>
 
-    <!-- Genres Row -->
-    <div class="row justify-content-center">
+      <!-- Genres Row -->
+      <div class="row justify-content-center">
         <h2 class="w-100 text-center">Genres</h2>
         <% genres.forEach((genre, index) => { %>
         <div class="col mb-4 d-flex align-items-stretch">
-            <div class="card genre-card">
-                <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                    <h5 class="card-title"><%= genre.label.charAt(0).toUpperCase() + genre.label.slice(1) %></h5>
-                    <p class="card-text"><%= (genre.score * 100).toFixed(2) %> %</p>
-                </div>
+          <div class="card genre-card">
+            <div
+              class="card-body d-flex flex-column justify-content-center align-items-center"
+            >
+              <h5 class="card-title">
+                <%= genre.label.charAt(0).toUpperCase() + genre.label.slice(1)
+                %>
+              </h5>
+              <p class="card-text"><%= (genre.score * 100).toFixed(2) %> %</p>
             </div>
+          </div>
         </div>
         <% }) %>
+      </div>
     </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+        const menu = document.querySelector("#mobile-menu");
+        const menuLinks = document.querySelector(".navbar-menu");
+  
+        menu.addEventListener("click", function () {
+          menu.classList.toggle("is-active");
+          menuLinks.classList.toggle("active");
+        });
+  
+        menu.style.zIndex = 999;
+  
+        menu.style.zIndex = 999;
+  
+        const li = document.querySelectorAll(".-container ul li");
+      </script>
+  </body>
 </html>
