--- a/Genre and Chord Detection/views/index.ejs
+++ b/Genre and Chord Detection/views/index.ejs
@@ -1,140 +1,251 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Upload Audio File</title>
-</head>
-<body>
-    <h1>Upload an Audio File</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="audioFile" accept="audio/*" required>
-        <button type="submit">Upload</button>
-    </form>
-
-
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Upload Audio File</title>
-</head>
-<style>
-    body{
-        background-color: #eedbbb;
-        position: fixed;
-        font-family: sans-serif;
-        color: #2c3e50;
-        margin: 0;
-        width: 100%;
-        height: 100%;
-        cursor: default;
-        user-select: none;
+  </head>
+  <style>
+    .navbar {
+      background-color: #cb6843;
+      height: 80px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      position: sticky;
+      border-bottom: solid;
+      border-color: #203354;
     }
-    .upload-container{
-        color: #cB6843;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        width: 100%;
-        position: fixed;
-        left: 0;
-        right: -10%;
-        bottom: 20%;
-        width: 400px;
-        height: 33%;
-        
-        margin: 0 auto 5vh auto;
+
+    .navbar-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      max-width: 1100px;
+      margin: none;
+      padding: 0 50px;
+    }
+
+    #navbar-logo img {
+      height: 75px;
+      width: 75px;
+      cursor: pointer;
+    }
+
+    .navbar-menu {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      list-style: none;
+      text-align: center;
+    }
+
+    .navbar-item {
+      height: 80px;
+    }
+
+    .guitar {
+      position: absolute;
+      left: 10px;
+    }
+
+    .navbar-links1 {
+      color: white;
+      grid-area: 1 / 1 / 2 / 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      padding: 0 1rem;
+      height: 100%;
+    }
+
+    .navbar-links2 {
+      color: white;
+      grid-area: 2 / 1 / 3 / 2;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      padding: 0 1rem;
+      height: 100%;
+    }
+
+    .navbar-links1:hover {
+      color: #203354;
+      transition: all 0.7s ease;
+    }
+
+    .navbar-links2:hover {
+      color: #203354;
+      transition: all 0.7s ease;
+    }
+    .centered{
+      position: fixed;
+      left: 45%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+      margin: -50px 0 0 -50px;
+    }
+
+    body {
+      background-color: #eedbbb;
+      position: fixed;
+      font-family: sans-serif;
+      color: #2c3e50;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      cursor: default;
+      user-select: none;
+    }
+    .upload-container {
+      color: #cb6843;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      width: 400px;
+      height: 33%;
+
+      margin: 0 auto 5vh auto;
     }
     .upload-button {
-    color: rgb(223, 231, 146);
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    position: fixed;
-    left: 50%; 
-    bottom: 10%; 
-    transform: translateX(-50%); 
-    width: 150px; 
-    height: 50px; 
-    margin: 0 auto;
-    border: 2px solid rgb(223, 231, 146); 
-    background-color: #cB6843; 
-    border-radius: 5px; 
-    cursor: pointer; 
-    text-decoration: none; 
-    font-size: 16px; 
-}
+      color: rgb(223, 231, 146);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 150px;
+      left: 50%;
+      top: 50%;
+      height: 50px;
+      margin: 0 auto;
+      background-color: #cb6843;
+      border-radius: 5px;
+      cursor: pointer;
+      text-decoration: none;
+      font-size: 16px;
+      
+    }
 
-.drop-container:hover {
-  background:rgb(227, 235, 163);
-  border-color: #111;
-}
-.drop-container:hover .drop-title {
-  color: #222;
-}
-.drop-title {
-  color: #444;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  transition: color .2s ease-in-out;
-}
-.drop-container {
-  position: relative;
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  left: -40%;
-  padding: 20px;
-  border-radius: 10px;
-  border: 2px dashed #555;
-  bottom: 50%;
-  color: #444;
-  cursor: pointer;
-  /* transition: background .2s ease-in-out, border .2s ease-in-out; */
-}
+    .drop-container:hover {
+      background: rgb(227, 235, 163);
+      border-color: #111;
+    }
+    .drop-container:hover .drop-title {
+      color: #222;
+    }
+    .drop-title {
+      color: #444;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      transition: color 0.2s ease-in-out;
+    }
+    .drop-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      border-radius: 10px;
+      border: 1px dashed #555;
+      color: #444;
+      cursor: pointer;
+      z-index: 5;
+    }
 
-.upload-nav {
-    background-color: #cB6843;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    border-bottom: solid;
-    border-color: #203354;
-}
+    .upload-nav {
+      background-color: #cb6843;
+      height: 80px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      position: sticky;
+      border-bottom: solid;
+      border-color: #203354;
+    }
 
-.upload-nav-container{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    max-width: 1100px;
-    margin: none;
-    padding: 0 50px;
-}
-</style>
-<body>
-    <nav class = "upload-nav">
-        <div class = "upload-nav-container">
-            <h1>Upload your songs here to find the chords and their Genre</h1>
-        </div>
-    <div class = "upload-container">
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for = "audio" class = "drop-container" id = "dropcontainer">
-        <input type="file" class= "choose-button"name="audioFile" accept="audio/*" required class="file-input">
+    .upload-nav-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      max-width: 1100px;
+      margin: none;
+      padding: 0 50px;
+    }
+  </style>
+  <body>
+    <nav class="navbar">
+      <div class="navbar-container">
+        <ul class="navbar-menu">
+          <li class="navbar-item">
+            <a href="/" class="navbar-links1"> Song Finder </a>
+          </li>
+          <li class="navbar-item">
+            <a href="http://127.0.0.1:5500/tuner.html" class="navbar-links2"> Tuner </a>
+          </li>
+          <li class="navbar-item">
+            <a href="http://127.0.0.1:5500/chords.html" class="navbar-links2"> Chords </a>
+          </li>
+          <li class="navbar-item">
+            <a href="http://localhost:3000/" class="navbar-links2">
+              Genre & Chords Detection
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="navbar-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </nav>
+
+    <div style="justify-content: center; display: flex">
+      <h1>Upload your songs here to find the chords and their Genre</h1>
+    </div>
+    <div class = "centered-upload centered">
+    <div class="upload-container">
+      <form action="/upload" method="post" enctype="multipart/form-data">
+        <label for="audio" class="drop-container" id="dropcontainer">
+          <input
+            type="file"
+            class="choose-button"
+            name="audioFile"
+            accept="audio/*"
+            required
+            class="file-input"
+          />
         </label>
         <button type="submit" class="upload-button">Upload</button>
-    </form>
+      </form>
     </div>
-</body>
+    </div>
+  </div>
+    <script>
+      const menu = document.querySelector("#mobile-menu");
+      const menuLinks = document.querySelector(".navbar-menu");
+
+      menu.addEventListener("click", function () {
+        menu.classList.toggle("is-active");
+        menuLinks.classList.toggle("active");
+      });
+
+      menu.style.zIndex = 999;
+
+      menu.style.zIndex = 999;
+
+      const li = document.querySelectorAll(".-container ul li");
+    </script>
+  </body>
 </html>
