Made minor Changes to UI

--- a/Genre and Chord Detection/views/index.ejs
+++ b/Genre and Chord Detection/views/index.ejs
@@ -1,23 +1,7 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Upload Audio File</title>
-</head>
-<body>
-    <h1>Upload an Audio File</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="audioFile" accept="audio/*" required>
-        <button type="submit">Upload</button>
-    </form>
-
-
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Upload Audio File</title>
 </head>
 <style>
@@ -100,17 +84,17 @@
   /* transition: background .2s ease-in-out, border .2s ease-in-out; */
 }
 
-.upload-nav {
-    background-color: #cB6843;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    border-bottom: solid;
-    border-color: #203354;
-}
+    .upload-nav {
+      background-color: #cb6843;
+      height: 80px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      position: sticky;
+      border-bottom: solid;
+      border-color: #203354;
+    }
 
 .upload-nav-container{
     display: flex;
@@ -134,7 +118,7 @@
         <input type="file" class= "choose-button"name="audioFile" accept="audio/*" required class="file-input">
         </label>
         <button type="submit" class="upload-button">Upload</button>
-    </form>
+      </form>
     </div>
 </body>
 </html>
