--- a/Genre and Chord Detection/views/results.ejs
+++ b/Genre and Chord Detection/views/results.ejs
@@ -131,7 +131,7 @@
         <div class="navbar-container">
           <ul class="navbar-menu">
             <li class="navbar-item">
-              <a href="/" class="navbar-links1"> Song Finder </a>
+              <a href="http://127.0.0.1:5500/songfinder.html" class="navbar-links1"> Song Finder </a>
             </li>
             <li class="navbar-item">
               <a href="http://127.0.0.1:5500/tuner.html" class="navbar-links2"> Tuner </a>
@@ -141,7 +141,7 @@
             </li>
             <li class="navbar-item">
               <a href="http://localhost:3000/" class="navbar-links2">
-                Genre & Chords Detection
+                Song Genres
               </a>
             </li>
           </ul>
