--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ html {
     height: 100%;
 }
 
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .note-flipper-container {
     display: flex;
     align-items: center;
@@ -40,7 +47,7 @@ body {
     margin: auto;
     width: 400px;
     position: fixed;
-    top: 63%;
+    top: 68%;
     left: 0;
     right: 0;
     text-align: center;
@@ -111,7 +118,7 @@ body {
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 45%;
+    bottom: 40%;
     width: 400px;
     height: 33%;
     margin: 0 auto 5vh auto;
