--- a/Genre and Chord Detection/views/results.ejs
+++ b/Genre and Chord Detection/views/results.ejs
@@ -44,6 +44,7 @@
 
       .navbar-item {
         height: 80px;
+        text-decoration: none;
       }
 
       .guitar {
@@ -60,6 +61,7 @@
         text-decoration: none;
         padding: 0 1rem;
         height: 100%;
+        text-decoration: none;
       }
 
       .navbar-links2 {
@@ -71,6 +73,7 @@
         text-decoration: none;
         padding: 0 1rem;
         height: 100%;
+        text-decoration: none;
       }
 
       .navbar-links1:hover {
